style.css
/* ... */
.testimonial-card--stacked .testimonial-card__quote-icon svg,
.testimonial-card--stacked .testimonial-card__quote-icon png {
  width: 100%;
  height: 100%;
}
@media only screen and (max-width:991px) {
  .testimonials-section--stacked {
    margin-top: 4rem;
  }
  .testimonial-card--stacked .testimonial-card__quote-icon {
	top: 2rem;
	width: 3rem;
	height: 3rem;
}
.testimonial-card--stacked {
	padding: 2.2rem 2.2rem 2.0625rem 2.2rem;
}
}
@media only screen and (max-width: 767px) {
.testimonials-section--stacked {
	margin-top: 2rem;
}
}
/* Faq Section */
.faqs__item {
  border-radius: .5rem;
  border: 0.063rem solid rgba(0, 0, 0, 0.10);
}
.faqs__item button {
	border: 0;
	background-color: transparent;
	cursor: pointer;
	padding: 1.5rem;
	appearance: none;
	color: inherit;
}
.faqs__question-heading {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 0;
}
.faqs__icon {
	flex-shrink: 0;
}
.faqs__list {
	display: flex;
	flex-direction: column;
	row-gap: 1rem;
	max-width: 55.625rem;
	margin-left: auto;
	margin-right: auto;
}
.faqs__question-text {
	font-style: normal;
	font-weight: 600;
	line-height: 150%;
	font-size: 1.0625rem;
}
.faqs__question {
  display: flex;
  justify-content: space-between;
  gap: .625rem;
  width: 100%;
}
.faqs__answer {
  max-width: 62.5rem;
  padding: 0 2.1875rem 1.5rem 1.5rem;
}
.faqs__answer-inner p {
  font-size: .9375rem;
  line-height: 150%;
}
@media only screen and (max-width: 767px) {
.faqs__question-text {
	font-size: 1rem;
  text-align: left;
}
.faqs__item button {
	padding: 1.2rem;
}
.faqs__answer {
	max-width: 100%;
	padding: 0 2.1875rem 1.2rem 1.2rem;
}
}

/* Cta */
.cta-section__inner {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  text-align: center;
}
.cta-section__title {
  color: var(--lsc-color-white);
  font-style: normal;
  font-weight: 700;
  line-height: 115%;
  letter-spacing: -0.05rem;
  text-transform: uppercase;
}
.cta-section__buttons {
	margin-top: 1.125rem;
}
@media only screen and (max-width:767px) {
  .cta-section__buttons {
	flex-direction: column;
  }
}

/* Brokers Section */
.inner-hero--text .inner-hero__title {
  color: var(--lsc-color-primary);
}
.inner-hero--text .inner-hero__title span {
  display: block;
}
.inner-hero--text .inner-hero__description {
  color: var(--lsc-color-primary);
  font-size: 1.125rem;
}

/* Downloads Section */
.downloads-section__list {
  margin: 0;
  padding: 0;
  list-style: none;
  display: flex;
  flex-direction: column;
  row-gap: 1.875rem;
  max-width: 69.625rem;
  margin-left: auto;
  margin-right: auto;
  padding-bottom: 1.875rem;
}
.downloads-section__header + .downloads-section__list {
  max-width: 100%;
}
.download-item {
  border-radius: .75rem;
  background-color: var(--lsc-color-subtle);
  padding: 3.9375rem 7.0625rem 2.8125rem 7.0625rem;
}
.download-item-wrapper {
	display: flex;
	align-items: center;
	justify-content: space-between;
	column-gap: 1.875rem;
	border-bottom: .125rem solid var(--lsc-color-accent);
	padding-bottom: 1rem;
}
.download-item-left {
  display: flex;
  column-gap: 1.875rem;
  flex: 1 1 auto;
  min-width: 0;
}
.download-item-right {
  display: flex;
  flex: 0 1 27rem;
  flex-wrap: wrap;
  gap: .75rem;
  justify-content: flex-end;
}
.download-item__icon {
	flex-shrink: 0;
}
.download-item__title {
	line-height: 150%;
	margin-bottom: 0;
	text-transform: capitalize;
}
.download-item__subtitle {
  margin-top: .3125rem;
  color: rgba(26, 22, 20, 0.60);
  font-size: .9375rem;
  font-style: normal;
  font-weight: 400;
  line-height: 150%;
}
.download-item__button {
  color: var(--lsc-color-white);
  font-size: .875rem;
  font-style: normal;
  font-weight: 600;
  line-height: 150%;
  letter-spacing: 0.026rem;
  display: inline-flex;
  gap: .625rem;
  align-items: center;
  width: 13.125rem;
  justify-content: center;
}
.download-item__button:hover {
	color: var(--lsc-color-white);
	background-color: var(--lsc-color-primary);
	border-color: var(--lsc-color-primary);
}
.download-item__button--web-form:hover {
	color: var(--lsc-color-primary);
	background-color: var(--lsc-color-accent);
	border-color: var(--lsc-color-accent);
}
.download-item__button-icon svg {
  width: .75rem;
}
@media only screen and (max-width: 991px) {
.download-item {
	padding: 3rem 4rem;
}
.download-item-wrapper {
	flex-direction: column;
	justify-content: flex-start;
	row-gap: 1.5rem;
}
.download-item-left {
	flex-direction: column;
	row-gap: .9375rem;
	align-items: center;
	text-align: center;
}
.download-item-right {
	flex: 0 1 auto;
	justify-content: center;
	width: 100%;
}
}
@media only screen and (max-width: 767px) {
.download-item {
	padding: 2rem 3rem;
}
.download-item__button {
	width: min(100%, 13.125rem);
}
}
@media only screen and (max-width: 575px) {
.download-item {
	padding: 2rem 1.5rem;
}
.download-item-right {
	flex-direction: column;
	align-items: center;
}
.download-item__button {
	width: 100%;
	max-width: 13.125rem;
}
}

/* Contact Form */
.contact-section {
	background-color: var(--lsc-color-panel);
}
.contact-section__header .section-header__divider {
  margin-bottom: 6.8125rem;
  width: 5rem;
}
.contact-section__title {
  margin-bottom: 0;
}
.contact-section__description p {
  color: rgba(26, 22, 20, 0.55);
  line-height: 165%;
  margin: 0;
}
.contact-section__grid {
  display: grid;
  grid-template-columns: 28.461437rem 1fr;
  column-gap: 1.875rem;
}
.contact-info-card {
  border-radius: 1rem;
  border: 0.063rem solid rgba(26, 22, 20, 0.08);
  background-color: var(--lsc-color-white);
  padding: 2.5rem;
  position: relative;
}
.contact-info-card__title {
  font-size: 1.25rem;
  font-style: normal;
  font-weight: 600;
  line-height: 150%;
  text-transform: capitalize;
}
.contact-info-card__text {
  color: rgba(26, 22, 20, 0.45);
  font-size: .9375rem;
  font-style: normal;
  font-weight: 400;
  line-height: 160%;
  max-width: 23.375rem;
}
/* ... */

